--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>João Leão - Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="canonical" href="https://joao-leao.github.io/portfolio/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
