--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>João Leão - Portfolio</title>
   <base href="/">
+  <meta name="description" content="Portfolio do desenvolvedor Front-end João Vitor D. Leão">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="canonical" href="https://joao-leao.github.io/portfolio/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
